--- a/keras/2.1-a-first-look-at-a-neural-network.ipynb
+++ b/keras/2.1-a-first-look-at-a-neural-network.ipynb
@@ -81,6 +81,18 @@
       "metadata": {
         "id": "2Tmbo5x4Lv3-"
       },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /tmp/.zoo/dataset/mnist/train-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/.zoo/dataset/mnist/train-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/.zoo/dataset/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/.zoo/dataset/mnist/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
       "source": [
         "from zoo.pipeline.api.keras.datasets import mnist\n",
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
